Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3126

conf-sanity test_41b: fld_server_lookup()) ASSERTION( fld->lsf_control_exp ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.5.0
    • Lustre 2.5.0
    • 3
    • 7596

      This issue was created by maloo for bfaccini <bruno.faccini@intel.com>

      This issue relates to the following test suite run: https://maloo.whamcloud.com/test_sets/5963ea2c-9e4a-11e2-9d68-52540035b04c.

      The sub-test test_41b failed with the following error:

      test failed to respond and timed out

      Info required for matching: conf-sanity 41b

      An LBUG occured on the OSS side :

      09:23:10:LustreError: 19905:0:(fld_handler.c:173:fld_server_lookup()) ASSERTION( fld->lsf_control_exp ) failed: 
      09:23:10:LustreError: 19905:0:(fld_handler.c:173:fld_server_lookup()) LBUG
      09:23:10:Pid: 19905, comm: ll_ost00_001
      09:23:10:
      09:23:10:Call Trace:
      09:23:13: [<ffffffffa04d7895>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
      09:23:13: [<ffffffffa04d7e97>] lbug_with_loc+0x47/0xb0 [libcfs]
      09:23:13: [<ffffffffa09bfe0f>] fld_server_lookup+0x2df/0x3b0 [fld]
      09:23:13: [<ffffffffa0d3b53e>] osd_fld_lookup+0xae/0x1e0 [osd_ldiskfs]
      09:23:13: [<ffffffffa0d4e902>] fid_is_on_ost+0x102/0x3b0 [osd_ldiskfs]
      09:23:13: [<ffffffffa0d5083a>] osd_oi_lookup+0xca/0x150 [osd_ldiskfs]
      09:23:13: [<ffffffffa0d4c810>] osd_object_init+0x4c0/0xa40 [osd_ldiskfs]
      09:23:13: [<ffffffffa066557d>] lu_object_alloc+0xcd/0x300 [obdclass]
      09:23:13: [<ffffffffa06658f9>] ? htable_lookup+0x119/0x1c0 [obdclass]
      09:23:13: [<ffffffffa06660e5>] lu_object_find_at+0x205/0x360 [obdclass]
      09:23:13: [<ffffffffa0666256>] lu_object_find+0x16/0x20 [obdclass]
      09:23:13: [<ffffffffa0e25f15>] ofd_object_find+0x35/0xf0 [ofd]
      09:23:13: [<ffffffffa0e27423>] ofd_precreate_objects+0x1d3/0x1360 [ofd]
      09:23:13: [<ffffffffa04e2d88>] ? libcfs_log_return+0x28/0x40 [libcfs]
      09:23:14: [<ffffffffa0e1cf72>] ofd_create+0x322/0x1470 [ofd]
      09:23:14: [<ffffffffa07e7ff5>] ? lustre_msg_buf+0x55/0x60 [ptlrpc]
      09:23:14: [<ffffffffa0df247c>] ost_handle+0x356c/0x46f0 [ost]
      09:23:14: [<ffffffffa04e40e4>] ? libcfs_id2str+0x74/0xb0 [libcfs]
      09:23:14: [<ffffffffa07f91dc>] ptlrpc_server_handle_request+0x41c/0xdf0 [ptlrpc]
      09:23:14: [<ffffffffa04d85de>] ? cfs_timer_arm+0xe/0x10 [libcfs]
      09:23:14: [<ffffffffa07f0819>] ? ptlrpc_wait_event+0xa9/0x290 [ptlrpc]
      09:23:15: [<ffffffffa04e82c1>] ? libcfs_debug_msg+0x41/0x50 [libcfs]
      09:23:15: [<ffffffff81052223>] ? __wake_up+0x53/0x70
      09:23:16: [<ffffffffa07fa725>] ptlrpc_main+0xb75/0x1870 [ptlrpc]
      09:23:16: [<ffffffffa07f9bb0>] ? ptlrpc_main+0x0/0x1870 [ptlrpc]
      09:23:16: [<ffffffff8100c0ca>] child_rip+0xa/0x20
      09:23:16: [<ffffffffa07f9bb0>] ? ptlrpc_main+0x0/0x1870 [ptlrpc]
      09:23:16: [<ffffffffa07f9bb0>] ? ptlrpc_main+0x0/0x1870 [ptlrpc]
      09:23:17: [<ffffffff8100c0c0>] ? child_rip+0x0/0x20
      09:23:18:
      09:23:18:Kernel panic - not syncing: LBUG
      09:23:18:Pid: 19905, comm: ll_ost00_001 Not tainted 2.6.32-279.19.1.el6_lustre.gc4681d8.x86_64 #1
      09:23:18:Call Trace:
      09:23:18: [<ffffffff814e9811>] ? panic+0xa0/0x168
      09:23:18: [<ffffffffa04d7eeb>] ? lbug_with_loc+0x9b/0xb0 [libcfs]
      09:23:18: [<ffffffffa09bfe0f>] ? fld_server_lookup+0x2df/0x3b0 [fld]
      09:23:18: [<ffffffffa0d3b53e>] ? osd_fld_lookup+0xae/0x1e0 [osd_ldiskfs]
      09:23:18: [<ffffffffa0d4e902>] ? fid_is_on_ost+0x102/0x3b0 [osd_ldiskfs]
      09:23:18: [<ffffffffa0d5083a>] ? osd_oi_lookup+0xca/0x150 [osd_ldiskfs]
      09:23:18: [<ffffffffa0d4c810>] ? osd_object_init+0x4c0/0xa40 [osd_ldiskfs]
      09:23:18: [<ffffffffa066557d>] ? lu_object_alloc+0xcd/0x300 [obdclass]
      09:23:18: [<ffffffffa06658f9>] ? htable_lookup+0x119/0x1c0 [obdclass]
      09:23:19: [<ffffffffa06660e5>] ? lu_object_find_at+0x205/0x360 [obdclass]
      09:23:19: [<ffffffffa0666256>] ? lu_object_find+0x16/0x20 [obdclass]
      09:23:19: [<ffffffffa0e25f15>] ? ofd_object_find+0x35/0xf0 [ofd]
      09:23:20: [<ffffffffa0e27423>] ? ofd_precreate_objects+0x1d3/0x1360 [ofd]
      09:23:20: [<ffffffffa04e2d88>] ? libcfs_log_return+0x28/0x40 [libcfs]
      09:23:20: [<ffffffffa0e1cf72>] ? ofd_create+0x322/0x1470 [ofd]
      09:23:21: [<ffffffffa07e7ff5>] ? lustre_msg_buf+0x55/0x60 [ptlrpc]
      09:23:21: [<ffffffffa0df247c>] ? ost_handle+0x356c/0x46f0 [ost]
      09:23:21: [<ffffffffa04e40e4>] ? libcfs_id2str+0x74/0xb0 [libcfs]
      09:23:22: [<ffffffffa07f91dc>] ? ptlrpc_server_handle_request+0x41c/0xdf0 [ptlrpc]
      09:23:23: [<ffffffffa04d85de>] ? cfs_timer_arm+0xe/0x10 [libcfs]
      09:23:23: [<ffffffffa07f0819>] ? ptlrpc_wait_event+0xa9/0x290 [ptlrpc]
      09:23:23: [<ffffffffa04e82c1>] ? libcfs_debug_msg+0x41/0x50 [libcfs]
      09:23:23: [<ffffffff81052223>] ? __wake_up+0x53/0x70
      09:23:23: [<ffffffffa07fa725>] ? ptlrpc_main+0xb75/0x1870 [ptlrpc]
      09:23:23: [<ffffffffa07f9bb0>] ? ptlrpc_main+0x0/0x1870 [ptlrpc]
      09:23:23: [<ffffffff8100c0ca>] ? child_rip+0xa/0x20
      09:23:23: [<ffffffffa07f9bb0>] ? ptlrpc_main+0x0/0x1870 [ptlrpc]
      09:23:23: [<ffffffffa07f9bb0>] ? ptlrpc_main+0x0/0x1870 [ptlrpc]
      09:23:23: [<ffffffff8100c0c0>] ? child_rip+0x0/0x20
      

            di.wang Di Wang (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: