LU-3126 obdclass: start lwp before process config log

Start lwp before process config log, to make sure fld
remote export(used by osd fid lookup) is initialized
during processing config log.

Signed-off-by: wang di <di.wang@intel.com>
Change-Id: I85649431f47ad8aa8bd1e46a7b074e15b080bb1d